Added current user attribute to progress dto